spec/fixtures/invalid_rails_app/lib/invalid_code_complexity.rb
def a
  b = 1 + 2 + 3 + 4 + 5
  c = 6 + 7 + 8 + 9 + 0
  d = 1 + 7 + 3 + 9 + 5
  e = 6 + 2 + 8 + 4 + 0
  f = 1 + 2 + 3 + 4 + 5
  g = 6 + 7 + 8 + 9 + 0
  h = 1 + 7 + 3 + 9 + 5
  i = 6 + 2 + 8 + 4 + 0
  j = b + c + d + e + f + g + h + i
end

puts a
